--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -50,41 +50,113 @@
                                     <segue destination="B0j-lq-g5v" kind="presentation" modalPresentationStyle="fullScreen" id="IfT-2n-j1A"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FYQ-BU-rOB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FYQ-BU-rOB">
                                 <rect key="frame" x="0.0" y="171" width="414" height="691"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="180" id="Wfh-E6-OG9">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="180" id="Wfh-E6-OG9" customClass="MovieCell" customModule="MovieDiary" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="180"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Wfh-E6-OG9" id="9zR-39-8Ap">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="180"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9QW-On-od1">
-                                                    <rect key="frame" x="35" y="26" width="344" height="128"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9QW-On-od1">
+                                                    <rect key="frame" x="35" y="26" width="344" height="128.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZ1-vv-Vfj">
-                                                            <rect key="frame" x="40" y="30" width="37.5" height="23.5"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="GZ1-vv-Vfj">
+                                                            <rect key="frame" x="40" y="30" width="204" height="23.5"/>
                                                             <attributedString key="attributedText">
                                                                 <fragment content="Title">
                                                                     <attributes>
                                                                         <font key="NSFont" size="20" name="Montserrat-SemiBold"/>
-                                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                                        <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="truncatingTail" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                                     </attributes>
                                                                 </fragment>
                                                             </attributedString>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="EAI-ep-66N">
+                                                            <rect key="frame" x="40" y="61.5" width="142" height="25"/>
+                                                            <subviews>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWa-bP-YJ4">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="26" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="26" id="8GT-Up-KMT"/>
+                                                                        <constraint firstAttribute="height" constant="25" id="R3E-MB-TIN"/>
+                                                                    </constraints>
+                                                                    <state key="normal" backgroundImage="empty_star_colored"/>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HdI-O8-quc">
+                                                                    <rect key="frame" x="29" y="0.0" width="26" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="25" id="0U4-su-3d7"/>
+                                                                        <constraint firstAttribute="width" constant="26" id="KzO-Xu-150"/>
+                                                                    </constraints>
+                                                                    <state key="normal" backgroundImage="empty_star_colored"/>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8rJ-2r-QR8">
+                                                                    <rect key="frame" x="58" y="0.0" width="26" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="25" id="Sfk-se-DK9"/>
+                                                                        <constraint firstAttribute="width" constant="26" id="k98-Hh-xA6"/>
+                                                                    </constraints>
+                                                                    <state key="normal" backgroundImage="empty_star_colored"/>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dg4-NX-Hqd">
+                                                                    <rect key="frame" x="87" y="0.0" width="26" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="25" id="E4v-Y7-ust"/>
+                                                                        <constraint firstAttribute="width" constant="26" id="Wwt-9g-wrU"/>
+                                                                    </constraints>
+                                                                    <state key="normal" backgroundImage="empty_star_colored"/>
+                                                                </button>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukr-Jf-bqk">
+                                                                    <rect key="frame" x="116" y="0.0" width="26" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="25" id="B80-C8-c9y"/>
+                                                                        <constraint firstAttribute="width" constant="26" id="zmp-YY-aMc"/>
+                                                                    </constraints>
+                                                                    <state key="normal" backgroundImage="empty_star_colored"/>
+                                                                </button>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="EAI-ep-66N" secondAttribute="height" multiplier="142:25" id="46M-e0-NpZ"/>
+                                                                <constraint firstAttribute="width" constant="142" id="Lzl-dR-rnz"/>
+                                                                <constraint firstAttribute="height" constant="25" id="Syd-XG-Ej4"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UwF-gv-7x2">
+                                                            <rect key="frame" x="300" y="53" width="14" height="22"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="14" id="4kr-9b-cmN"/>
+                                                                <constraint firstAttribute="height" constant="22" id="pfx-AC-773"/>
+                                                            </constraints>
+                                                            <color key="tintColor" red="0.3529411764705882" green="0.3529411764705882" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <state key="normal" image="chevron.right" catalog="system">
+                                                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" configurationType="pointSize" pointSize="18" weight="semibold"/>
+                                                            </state>
+                                                        </button>
                                                     </subviews>
-                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstItem="EAI-ep-66N" firstAttribute="top" secondItem="GZ1-vv-Vfj" secondAttribute="bottom" constant="8" id="23W-au-11K"/>
+                                                        <constraint firstAttribute="trailing" secondItem="UwF-gv-7x2" secondAttribute="trailing" constant="30" id="8wh-vQ-ZjF"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GZ1-vv-Vfj" secondAttribute="trailing" constant="100" id="JDa-yf-6Z1"/>
                                                         <constraint firstItem="GZ1-vv-Vfj" firstAttribute="top" secondItem="9QW-On-od1" secondAttribute="top" constant="30" id="Nqr-QA-eGh"/>
+                                                        <constraint firstItem="UwF-gv-7x2" firstAttribute="leading" secondItem="EAI-ep-66N" secondAttribute="trailing" constant="118" id="Qrs-0Z-laO"/>
+                                                        <constraint firstAttribute="bottom" secondItem="EAI-ep-66N" secondAttribute="bottom" constant="42" id="TYi-X9-Xg4"/>
+                                                        <constraint firstItem="EAI-ep-66N" firstAttribute="leading" secondItem="9QW-On-od1" secondAttribute="leading" constant="40" id="Y9m-od-RMV"/>
                                                         <constraint firstItem="GZ1-vv-Vfj" firstAttribute="leading" secondItem="9QW-On-od1" secondAttribute="leading" constant="40" id="lGT-Bb-Jke"/>
+                                                        <constraint firstItem="UwF-gv-7x2" firstAttribute="centerY" secondItem="9QW-On-od1" secondAttribute="centerY" id="q45-i5-VE7"/>
+                                                        <constraint firstAttribute="trailing" secondItem="EAI-ep-66N" secondAttribute="trailing" constant="162" id="tzJ-5n-iDf"/>
                                                     </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="7"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </view>
                                             </subviews>
-                                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstItem="9QW-On-od1" firstAttribute="centerX" secondItem="9zR-39-8Ap" secondAttribute="centerX" id="Qe6-0G-7Lb"/>
                                                 <constraint firstItem="9QW-On-od1" firstAttribute="centerY" secondItem="9zR-39-8Ap" secondAttribute="centerY" id="R7h-FY-7vf"/>
@@ -92,6 +164,11 @@
                                                 <constraint firstItem="9QW-On-od1" firstAttribute="leading" secondItem="9zR-39-8Ap" secondAttribute="leading" constant="35" id="sKH-WY-ZBh"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="movieTitle" destination="GZ1-vv-Vfj" id="US3-mD-X2U"/>
+                                            <outlet property="ratingStars" destination="EAI-ep-66N" id="2kK-kc-2xL"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -109,6 +186,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="FYQ-BU-rOB" id="4Am-0g-H1k"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -293,6 +373,8 @@
     </scenes>
     <resources>
         <image name="chevron.left" catalog="system" width="48" height="64"/>
+        <image name="chevron.right" catalog="system" width="48" height="64"/>
+        <image name="empty_star_colored" width="20" height="19"/>
         <image name="empty_star_white" width="36" height="34"/>
         <image name="plus" catalog="system" width="64" height="56"/>
     </resources>
